<resources>
    <string name="app_name">MarcosCargo</string>
    <string name="action_settings">Settings</string>
    <string name="password_format">*** Must contain at least 1 upper-case letter, 1 lower-case letter,   \n    1 number/ special character and be at least 8 characters long</string>
    <string name="terms_condition">By signing up I agree with the Macos Cargo Terms and Conditions</string>
    <string name="new_parcel_label">Parcel</string>
    <string name="tracking_number_hint">Scan or type tracking number</string>
    <string name="optional_title">Title(optinal)</string>
    <string name="pick_up_point_hint">Pick up point</string>
    <string name="destination_hint">Destination</string>
    <string name="notes_hint">Summarry</string>
    <string name="no_item">no cargo</string>
    <string name="no_history">no history</string>
    <string name="cargo_name">Cargo name</string>
    <string name="sign_btn">Sign Here</string>
    <string name="external_dir">GetSignature</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
